# BLot

./: .clang-format  .editorconfig  .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  NodeEditor.json  README.md  STYLEGUIDE.md  STYLE_GUIDE.md  TODO.md  appsettings.json  blend2d_test.cpp  build.bat  build.sh  imgui.ini  quick_build.bat  vcpkg.json
.github/workflows/: ci.yml
DOCS/: README.md  app_paths.md  components.md  file_naming.md  folder_structure.md  logging.md  notification_popup_pystem.md  notification_popup_system.md  works.md
addons/: CMakeLists.txt  README.md
addons/addon_template/: CMakeLists.txt  bxTemplate.h
addons/bxBlend2D/: .gitmodules  Blend2DRenderer.cpp  Blend2DRenderer.h  CMakeLists.txt  README.md  addon.json  bxBlend2DAddon.cpp  bxBlend2DAddon.h  bxBlend2d.cpp  bxBlend2d.h
addons/bxBlend2D/examples/gradient_demo/: CMakeLists.txt  app.cpp  app.h  app_entry.h  main.cpp
addons/bxBlend2D/windows/: StrokeWindow.cpp
addons/bxCodeEditor/: .gitmodules  CMakeLists.txt  README.md  addon.json  bxCodeEditor.cpp  bxCodeEditor.h
addons/bxCodeEditor/src/: CodeEditorWindow.cpp  bxCodeEditor.cpp  bxCodeEditor.h
addons/bxImGui/src/: MWindow.h  Mui.cpp  Mui.h  bxImGui.cpp
addons/bxMui/: bxMui.cpp  bxMui.h
addons/bxOsc/: CMakeLists.txt  README.md  addon.json  bxOsc.cpp  bxOsc.h  ofxOsc.h
addons/bxScriptEngine/: CMakeLists.txt  bxScriptEngine.cpp  bxScriptEngine.h
addons/bxScriptEngine/examples/simple_console/: app.h  app_entry.h  main.cpp
addons/bxTemplate/: bxTemplate.cpp  bxTemplate.h
apps/: CMakeLists.txt
apps/appTemplate/: CMakeLists.txt  README.md  addons.cmake  app.cpp  app.h  app.json  app_entry.h  main.cpp
apps/example_app/: CMakeLists.txt  addons.cmake  app.cpp  app.h  app.json  main.cpp
apps/example_drawing/: app.h  app.json
apps/gradient_test/: CMakeLists.txt  app.cpp  app.json  main.cpp
apps/sample_app/: app.cpp  app.h  main.cpp
apps/sample_blend2d_gradient/: CMakeLists.txt  app.cpp  app.h  app_entry.h  main.cpp
apps/sample_menubar/: CMakeLists.txt  app.h  main.cpp
apps/sample_script_engine/: CMakeLists.txt  app.h  app_entry.h  main.cpp
apps/sample_ui/: CMakeLists.txt  app.cpp  app.h  app_entry.h  main.cpp
assets/fonts/: fontRobotoRegular.h
cmake/: BlotAddon.cmake  BlotAddons.cmake
docs/: addons.md  addons_creating.md  addons_using.md  apps.md  apps_creating.md  build_instructions.md  contributing.md  creating_addons.md  includes.md  managers.md  namespaces.md  settings.md
src/: AddonBase.cpp  AddonManager.cpp  AddonManager.h  AppPaths.cpp  AppPaths.h  Blend2DRenderer.cpp  Blend2DRenderer.h  BlotApp.cpp  BlotApp.h  Canvas.cpp  Canvas.h  CanvasComponent.h  CanvasManager.cpp  CanvasManager.h  CodeEditor.cpp  CodeEditor.h  ECSManager.cpp  ECSManager.h  Graphics.cpp  Graphics.h  ImGuiRenderer.cpp  ImGuiRenderer.h  NodeEditor.cpp  NodeEditor.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h  ScriptEngine.cpp  Shader.cpp  Shader.h  TextRenderer.cpp  VertexBuffer.cpp  main.cpp
src/addons/: AddonBase.cpp  AddonBase.h  AddonManager.cpp  AddonManager.h
src/app/: AppSettings.cpp  AppSettings.h  BlotApp.cpp  BlotApp.h  main.cpp
src/canvas/: Canvas.cpp  Canvas.h  CanvasManager.cpp  CanvasManager.h
src/codeeditor/: CodeEditor.cpp  CodeEditor.h
src/components/: DraggableComponent.h  NodeComponent.h  SelectableComponent.h  ShapeComponent.h  StyleComponent.h  TextureComponent.h
src/core/: AddonBase.cpp  AddonBase.h  AddonLoader.cpp  AddonLoader.h  AddonManager.cpp  AddonManager.h  AddonRegistry.cpp  AddonRegistry.h  AppSettings.h  BlotEngine.cpp  BlotEngine.h  IAddon.cpp  IAddon.h  IApp.cpp  IApp.h  IManager.h  ISettings.h  IWindow.h  Iui.h  MAddon.cpp  MAddon.h  U_core.h  WindowSettings.h  core.h  json.h
src/ecs/: ECSManager.cpp  ECSManager.h  MEcs.cpp  MEcs.h  PropertyReflection.h
src/framework/: FrameworkApp.cpp  FrameworkApp.h  IWork.h
src/node/: NodeEditor.cpp
src/rendering/: Blend2DRenderer.cpp  Blend2DRenderer.h  Graphics.cpp  Graphics.h  IRenderer.h  MRendering.cpp  MRendering.h  Renderer.cpp  Renderer.h  RendererRegistry.h  RenderingManager.cpp  RenderingManager.h  ResourceManager.cpp  ResourceManager.h  U_rendering.h  gladGlfw.h  rendering.h
src/resources/: Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h
src/scripting/: ScriptEngine.cpp  ScriptEngine.h
src/ui/: AddonManagerWindow.cpp  AddonManagerWindow.h  Bambu Studio.lnk  CMakeLists.txt  CanvasDisplayWindow.cpp  CanvasDisplayWindow.h  CanvasWindow.cpp  CanvasWindow.h  CodeEditor.cpp  CodeEditor.h  CodeEditorWindow.cpp  CodeEditorWindow.h  CoordinateSystem.cpp  CoordinateSystem.h  Cursor.lnk  DebugPanel.cpp  DebugPanel.h  Google Docs.lnk  Google Drive.lnk  Google Sheets.lnk  Google Slides.lnk  ImGuiGLMConverters.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiUtils.h  ImGuiWindow.cpp  ImGuiWindow.h  InfoPanelWindow.cpp  InfoPanelWindow.h  InfoWindow.cpp  InfoWindow.h  LogWindow.cpp  LogWindow.h  MShortcut.cpp  MShortcut.h  MainMenuBar.cpp  MainMenuBar.h  Mui.cpp  Mui.h  NodeEditorWindow.cpp  (+31 more)
src/ui/PP_INSPO/: pixel_plotter_docs_impl.ai  retro_risograph_first_image-01-o.avif
src/ui/windows/: AddonManagerWindow.cpp  AddonManagerWindow.h  CanvasWindow.cpp  CanvasWindow.h  CodeEditorWindow.cpp  CodeEditorWindow.h  DebugPanel.cpp  DebugPanel.h  ImGuiWindow.cpp  ImGuiWindow.h  InfoWindow.cpp  InfoWindow.h  LogWindow.cpp  LogWindow.h  MainMenuBar.cpp  MainMenuBar.h  NodeEditorWindow.cpp  NodeEditorWindow.h  PropertiesWindow.cpp  PropertiesWindow.h  SaveWorkspaceDialog.cpp  SaveWorkspaceDialog.h  StrokeWindow.cpp  StrokeWindow.h  TerminalWindow.cpp  TerminalWindow.h  TextureViewerWindow.cpp  TextureViewerWindow.h  ThemeEditorWindow.cpp  ThemeEditorWindow.h  ThemePanel.cpp  ThemePanel.h  ToolbarWindow.cpp  ToolbarWindow.h  Window.h  WindowManagerPanel.cpp  WindowManagerPanel.h
tools/: install-hooks.sh
tools/hooks/: pre-commit.sh
works/: CMakeLists.txt
works/sample_blend2d_gradient/: CMakeLists.txt  main.cpp  work.cpp  work_entry.h
workspaces/: creative_coding.json  current.json  illustrator.json  minimal.json
(+76 files in other folders)
